--- a/source/pages/buygiftcardsinfo/buygiftcardsinfo.wxml
+++ b/source/pages/buygiftcardsinfo/buygiftcardsinfo.wxml
@@ -28,6 +28,14 @@
                 <template is="wxParse" data="{{wxParseData:howbuy.nodes}}" />
             </view>
         </view>
-        <button class="pay butcolor" bindtap="paygiftcard" id="/pages/buygiftcardssuccess/buygiftcardssuccess?id={{cardinfo.id}}">确认支付{{cardprice[priceindex].buyprice}}</button>
+
+
+        <!-- <button class="pay butcolor" bindtap="paygiftcard" id="/pages/buygiftcardssuccess/buygiftcardssuccess?id={{cardinfo.id}}">确认支付{{cardprice[priceindex].buyprice}}</button> -->
     </view>
+</view>
+
+<view class="flex-row center w-100" >
+  <view bindtap="paygiftcard" id="/pages/buygiftcardssuccess/buygiftcardssuccess?id={{cardinfo.id}}"  class="pay flex-row center margin-left-40 margin-right-40 butcolor">
+    <view class="line-height-90 butcolor">确认支付{{cardprice[priceindex].buyprice}}</view>
+  </view>
 </view>
