--- a/source/pages/feedback/feedback.wxml
+++ b/source/pages/feedback/feedback.wxml
@@ -14,9 +14,18 @@
                 </view>
             </view>
         </view>
-        <view class="flex-row flex-column fixbottom butcolor">
+
+
+        <!-- <view class="flex-row flex-column fixbottom butcolor">
             <view class="btns butcolor" bindtap="tosave">提交意见</view>
-        </view>
+        </view> -->
 
     </view>
+</view>
+
+
+<view class="flex-row center w-100" >
+  <view bindtap="tosave" class="pay flex-row center margin-left-40 margin-right-40 butcolor">
+    <view class="line-height-90 butcolor">提交意见</view>
+  </view>
 </view>
