--- a/source/pages/malldetail/malldetail.wxss
+++ b/source/pages/malldetail/malldetail.wxss
@@ -79,7 +79,7 @@
     left: 0;
     z-index: 10;
     /* padding: 16rpx 0 8rpx; */
-    height: 6%;
+    height: 10%;
     justify-content: space-between;
     align-items: center;
 }
@@ -145,16 +145,16 @@
     font-weight: 400;
     color: #FFFFFF;
 
-    width: 25%;
+    /* width: 25%; */
 
 }
 
 .titele_top_main {
-    margin: 15px 13px;
+    margin: 7px 13px;
 }
 
 .titele_top_main1 {
-    margin: 23px 13px;
+    margin: 15px 13px;
 }
 
 .titele_top_main2 {
