--- a/source/pages/addpingjia/addpingjia.wxml
+++ b/source/pages/addpingjia/addpingjia.wxml
@@ -36,9 +36,9 @@
     
   <view class="pingjia_top" style="font-size: 12rpx;">
     <!-- <view class="h5 txt-33 margin-bottom-20">商品评价</view> -->
-    <textarea  class="pingjiacont" value="{{contents}}" bindinput="contentsFn" maxlength="-1" name="" id="" cols="30" rows="10" placeholder="从多个角度评价商品，可以帮助更多想买的人~"></textarea>
+    <textarea  class="pingjiacont margin-top-20" value="{{contents}}" bindinput="contentsFn" maxlength="-1" name="" id="" cols="30" rows="10" placeholder="从多个角度评价商品，可以帮助更多想买的人~"></textarea>
   </view>
-  <view class="pingjia_bottom">
+  <view class="pingjia_bottom margin-bottom-20">
     <!-- <view class="h5 txt-33 margin-bottom-20">商品评价图片</view> -->
     <view class="flex-row flex-wrap" style="align-items:center;">
       <image src="{{uploadpath}}resource/{{res.uploadimg}}" bindtap="uploadimg" id='-1' class="uploadimg line"></image>
@@ -52,7 +52,14 @@
   </view>
 </view>
 
-<view class="flex-row flex-column fixbottom">
+<!-- <view class="flex-row flex-column fixbottom">
   <view class="btns butcolor" bindtap="{{flag==true?'tosave':''}}">发布</view>
+</view> -->
 </view>
+
+
+<view class="flex-row center w-100" >
+  <view bindtap="{{flag==true?'tosave':''}}" class="pay flex-row center margin-left-40 margin-right-40 butcolor">
+    <view class="line-height-90 butcolor">发布</view>
+  </view>
 </view>
