--- a/source/pages/giftcards/giftcards.wxml
+++ b/source/pages/giftcards/giftcards.wxml
@@ -27,15 +27,18 @@
         </view>
       </view>
     </view>
-    <view class="flex-row" style="align-items: center;justify-content:center;margin: 41rpx 0">
-      <view class="f-24 bottomcontrnt" bindtap="navigateto" id="/pages/giftcardbuyjilu/giftcardbuyjilu">购买记录</view>
-      <view class="f-24 bottomcontrnt" style="margin: 0 16rpx;">|</view>
-      <view class="f-24 bottomcontrnt" bindtap="navigateto" id="/pages/duihuanjilu/duihuanjilu">兑换记录</view>
-      <view class="f-24 bottomcontrnt" style="margin: 0 16rpx;">|</view>
-      <view class="f-24 bottomcontrnt" bindtap="navigateto" id="/pages/giftcardshousongjilu/giftcardshousongjilu">收送记录</view>
-      <view class="f-24 bottomcontrnt" style="margin: 0 16rpx;">|</view>
-      <view class="f-24 bottomcontrnt" bindtap="navigateto" id="/pages/giftcardshiyongjilu/giftcardshiyongjilu">使用记录</view>
+    <view class="flex-row center">
+      <view class="flex-row bottom" style="align-items: center;justify-content:center;margin: 41rpx 0">
+        <view class="f-24 bottomcontrnt" bindtap="navigateto" id="/pages/giftcardbuyjilu/giftcardbuyjilu">购买记录</view>
+        <view class="f-24 bottomcontrnt" style="margin: 0 16rpx;">|</view>
+        <view class="f-24 bottomcontrnt" bindtap="navigateto" id="/pages/duihuanjilu/duihuanjilu">兑换记录</view>
+        <view class="f-24 bottomcontrnt" style="margin: 0 16rpx;">|</view>
+        <view class="f-24 bottomcontrnt" bindtap="navigateto" id="/pages/giftcardshousongjilu/giftcardshousongjilu">收送记录</view>
+        <view class="f-24 bottomcontrnt" style="margin: 0 16rpx;">|</view>
+        <view class="f-24 bottomcontrnt" bindtap="navigateto" id="/pages/giftcardshiyongjilu/giftcardshiyongjilu">使用记录</view>
+      </view>
     </view>
+   
   </view>
   <view style="display: {{flag == 'B' ? 'block' :'none'}};">
     <view class="flex-row flex-column" style=" background: rgba(255, 255, 255, 1); min-height:90vh; width: 100vw;">
